[workspace]
resolver = "2"

members = [
    "crates/scalar-core",
    "crates/scalar-node",
    "crates/scalar-consensus-common",
    "crates/scalar-swarm",
    "crates/scalar-swarm-config",
    "crates/scalar-kvstore",
    "crates/scalar-json-rpc",
    "crates/scalar-rest-api",
    "crates/scalar-telemetry",
    "scalar-test-cluster",
]

exclude = [
    "sui/external-crates/move/crates/bytecode-interpreter-crypto",
    "sui/external-crates/move/crates/bytecode-interpreter-testsuite",
    "sui/external-crates/move/crates/bytecode-verifier-libfuzzer",
    "sui/external-crates/move/crates/bytecode-verifier-tests",
    "sui/external-crates/move/crates/bytecode-verifier-transactional-tests",
    "sui/external-crates/move/crates/enum-compat-util",
    "sui/external-crates/move/crates/invalid-mutations",
    "sui/external-crates/move/crates/language-benchmarks",
    "sui/external-crates/move/crates/module-generation",
    "sui/external-crates/move/crates/move-abstract-stack",
    "sui/external-crates/move/crates/move-analyzer",
    "sui/external-crates/move/crates/move-binary-format",
    "sui/external-crates/move/crates/move-borrow-graph",
    "sui/external-crates/move/crates/move-bytecode-source-map",
    "sui/external-crates/move/crates/move-bytecode-utils",
    "sui/external-crates/move/crates/move-bytecode-verifier",
    "sui/external-crates/move/crates/move-bytecode-viewer",
    "sui/external-crates/move/crates/move-cli",
    "sui/external-crates/move/crates/move-command-line-common",
    "sui/external-crates/move/crates/move-compiler",
    "sui/external-crates/move/crates/move-compiler-transactional-tests",
    "sui/external-crates/move/crates/move-core-types",
    "sui/external-crates/move/crates/move-coverage",
    "sui/external-crates/move/crates/move-disassembler",
    "sui/external-crates/move/crates/move-docgen",
    "sui/external-crates/move/crates/move-errmapgen",
    "sui/external-crates/move/crates/move-explain",
    "sui/external-crates/move/crates/move-ir-compiler",
    "sui/external-crates/move/crates/move-ir-compiler-transactional-tests",
    "sui/external-crates/move/crates/move-ir-to-bytecode",
    "sui/external-crates/move/crates/move-ir-to-bytecode-syntax",
    "sui/external-crates/move/crates/move-ir-types",
    "sui/external-crates/move/crates/move-model",
    "sui/external-crates/move/crates/move-package",
    "sui/external-crates/move/crates/move-proc-macros",
    "sui/external-crates/move/crates/move-prover",
    "sui/external-crates/move/crates/move-prover-boogie-backend",
    "sui/external-crates/move/crates/move-prover-test-utils",
    "sui/external-crates/move/crates/move-read-write-set-types",
    "sui/external-crates/move/crates/move-stackless-bytecode",
    "sui/external-crates/move/crates/move-stackless-bytecode-interpreter",
    "sui/external-crates/move/crates/move-stdlib",
    "sui/external-crates/move/crates/move-symbol-pool",
    "sui/external-crates/move/crates/move-transactional-test-runner",
    "sui/external-crates/move/crates/move-unit-test",
    "sui/external-crates/move/crates/move-vm-config",
    "sui/external-crates/move/crates/move-vm-integration-tests",
    "sui/external-crates/move/crates/move-vm-profiler",
    "sui/external-crates/move/crates/move-vm-runtime",
    "sui/external-crates/move/crates/move-vm-test-utils",
    "sui/external-crates/move/crates/move-vm-transactional-tests",
    "sui/external-crates/move/crates/move-vm-types",
    "sui/external-crates/move/crates/prover-mutation",
    "sui/external-crates/move/crates/serializer-tests",
    "sui/external-crates/move/crates/spec-flatten",
    "sui/external-crates/move/crates/test-generation",
    "sui/external-crates/move/move-execution/next-vm/crates/move-bytecode-verifier",
    "sui/external-crates/move/move-execution/next-vm/crates/move-stdlib",
    "sui/external-crates/move/move-execution/next-vm/crates/move-vm-runtime",
    "sui/external-crates/move/move-execution/v0/move-bytecode-verifier",
    "sui/external-crates/move/move-execution/v0/move-stdlib",
    "sui/external-crates/move/move-execution/v0/move-vm/runtime",
    "sui/external-crates/move/move-execution/v1/crates/move-bytecode-verifier",
    "sui/external-crates/move/move-execution/v1/crates/move-stdlib",
    "sui/external-crates/move/move-execution/v1/crates/move-vm-runtime",
    "sui/sdk/move-binary-format-wasm",
    "sui/consensus/config",
    "sui/consensus/core",
    "sui/crates/anemo-benchmark",
    "sui/crates/data-transform",
    "sui/crates/mysten-common",
    "sui/crates/mysten-metrics",
    "sui/crates/mysten-network",
    "sui/crates/mysten-util-mem",
    "sui/crates/mysten-util-mem-derive",
    "sui/crates/prometheus-closure-metric",
    "sui/crates/shared-crypto",
    "sui/crates/simulacrum",
    "sui/crates/sui",
    "sui/crates/sui-adapter-transactional-tests",
    "sui/crates/sui-analytics-indexer",
    "sui/crates/sui-analytics-indexer-derive",
    "sui/crates/sui-archival",
    "sui/crates/sui-authority-aggregation",
    "sui/crates/sui-aws-orchestrator",
    "sui/crates/sui-benchmark",
    "sui/crates/sui-bridge",
    "sui/crates/sui-cluster-test",
    "sui/crates/sui-common",
    "sui/crates/sui-config",
    "sui/crates/sui-core",
    "sui/crates/sui-cost",
    "sui/crates/sui-data-ingestion",
    "sui/crates/sui-e2e-tests",
    "sui/crates/sui-enum-compat-util",
    "sui/crates/sui-faucet",
    "sui/crates/sui-framework",
    "sui/crates/sui-framework-snapshot",
    "sui/crates/sui-framework-tests",
    "sui/crates/sui-genesis-builder",
    "sui/crates/sui-graphql-e2e-tests",
    "sui/crates/sui-graphql-rpc",
    "sui/crates/sui-indexer",
    "sui/crates/sui-json",
    "sui/crates/sui-json-rpc",
    "sui/crates/sui-json-rpc-api",
    "sui/crates/sui-json-rpc-tests",
    "sui/crates/sui-json-rpc-types",
    "sui/crates/sui-keys",
    "sui/crates/sui-kvstore",
    "sui/crates/sui-macros",
    "sui/crates/sui-metric-checker",
    "sui/crates/sui-move",
    "sui/crates/sui-move-build",
    "sui/crates/sui-network",
    "sui/crates/sui-node",
    "sui/crates/sui-open-rpc",
    "sui/crates/sui-open-rpc-macros",
    "sui/crates/sui-oracle",
    "sui/crates/sui-package-resolver",
    "sui/crates/sui-proc-macros",
    "sui/crates/sui-protocol-config",
    "sui/crates/sui-protocol-config-macros",
    "sui/crates/sui-proxy",
    "sui/crates/sui-replay",
    "sui/crates/sui-rest-api",
    "sui/crates/sui-rosetta",
    "sui/crates/sui-rpc-loadgen",
    "sui/crates/sui-sdk",
    "sui/crates/sui-simulator",
    "sui/crates/sui-single-node-benchmark",
    "sui/crates/sui-snapshot",
    "sui/crates/sui-source-validation",
    "sui/crates/sui-source-validation-service",
    "sui/crates/sui-storage",
    "sui/crates/sui-surfer",
    "sui/crates/sui-swarm",
    "sui/crates/sui-swarm-config",
    "sui/crates/sui-telemetry",
    "sui/crates/sui-test-transaction-builder",
    "sui/crates/sui-test-validator",
    "sui/crates/sui-tls",
    "sui/crates/sui-tool",
    "sui/crates/sui-transaction-builder",
    "sui/crates/sui-transaction-checks",
    "sui/crates/sui-transactional-test-runner",
    "sui/crates/sui-types",
    "sui/crates/sui-upgrade-compatibility-transactional-tests",
    "sui/crates/sui-verifier-transactional-tests",
    "sui/crates/telemetry-subscribers",
    "sui/crates/test-cluster",
    "sui/crates/transaction-fuzzer",
    "sui/crates/typed-store",
    "sui/crates/typed-store-derive",
    "sui/crates/typed-store-error",
    "sui/crates/workspace-hack",
    "sui/crates/x",
    "sui/narwhal/config",
    "sui/narwhal/crypto",
    "sui/narwhal/executor",
    "sui/narwhal/network",
    "sui/narwhal/node",
    "sui/narwhal/primary",
    "sui/narwhal/storage",
    "sui/narwhal/test-utils",
    "sui/narwhal/types",
    "sui/narwhal/worker",
    "sui/sui-execution",
    "sui/sui-execution/cut",
    "sui/sui-execution/latest/sui-adapter",
    "sui/sui-execution/latest/sui-move-natives",
    "sui/sui-execution/latest/sui-verifier",
    "sui/sui-execution/next-vm/sui-adapter",
    "sui/sui-execution/next-vm/sui-move-natives",
    "sui/sui-execution/next-vm/sui-verifier",
    "sui/sui-execution/v0/sui-adapter",
    "sui/sui-execution/v0/sui-move-natives",
    "sui/sui-execution/v0/sui-verifier",
    "sui/sui-execution/v1/sui-adapter",
    "sui/sui-execution/v1/sui-move-natives",
    "sui/sui-execution/v1/sui-verifier",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, sui-move-build, and sui crates.
version = "1.16.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.71"
arrow-array = "47.0.0"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
async-recursion = "1.0.4"
async-trait = "0.1.61"
atomic_float = "0.1"
aws-config = "0.56"
aws-sdk-ec2 = "0.29.0"
aws-sdk-dynamodb = "0.29.0"
aws-sdk-s3 = "0.29.0"
aws-smithy-http = "0.56"
aws-smithy-runtime-api = "0.56"
axum = { version = "0.6.6", default-features = false, features = [
    "headers",
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
axum-extra = "0.4.2"
axum-server = { version = "0.5.1", default-features = false, features = [
    "tls-rustls",
] }
backoff = { version = "0.4.0", features = [
    "futures",
    "futures-core",
    "pin-project-lite",
    "tokio",
    "tokio_1",
] }
base64 = "0.21.2"
base64-url = "2"
bcs = "0.1.4"
better_any = "0.1.1"
bimap = "0.6.2"
bincode = "1.3.3"
bip32 = "0.4.0"
byteorder = "1.4.3"
bytes = "1.4.0"
cached = "0.43.0"
camino = "1.1.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
collectable = "0.0.2"
colored = "2.0.0"
color-eyre = "0.6.2"
comfy-table = "6.1.3"
console-subscriber = "0.2"
const-str = "0.5.3"
criterion = { version = "0.5.0", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
crossterm = "0.25.0"
csv = "1.2.1"
dashmap = "5.4.0"
# datatest-stable = "0.1.2"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derivative = "2.2.0"
derive-syn-parse = "0.1.5"
derive_builder = "0.12.0"
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = [
    "chrono",
    "postgres",
    "r2d2",
    "serde_json",
    "64-column-tables",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
    "postgres_backend",
] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
diesel_migrations = { version = "2.0.0" }
dirs = "4.0.0"
duration-str = "0.5.0"
ed25519 = { version = "1.5.0", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
petgraph = "0.5.1"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fdlimit = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3.28"
futures-core = "0.3.21"
git-version = "0.3.5"
glob = "0.3.1"
governor = "0.6.0"
hashbrown = "0.12"
hdrhistogram = "7.5.1"
hex = "0.4.3"
hex-literal = "0.3.4"
highlight = { version = "0.0.3" }
http = "0.2.8"
http-body = "0.4.5"
humantime = "2.1.0"
hyper = "0.14.20"
hyper-rustls = { version = "0.24", features = ["rustls-native-certs", "http2"] }
im = "15"
impl-trait-for-tuples = "0.2.0"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.2"
inquire = "0.6.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
integer-encoding = "3.0.1"
itertools = "0.10.5"
jemalloc-ctl = "^0.5"
jsonrpsee = { git = "https://github.com/wlmyng/jsonrpsee.git", rev = "b1b300784795f6a64d0fcdf8f03081a9bc38bde8", features = [
    "server",
    "macros",
    "ws-client",
    "http-client",
    "jsonrpsee-core",
] }
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
leb128 = "0.2.5"
lru = "0.10"
markdown-gen = "1.2.1"
match_opt = "0.1.2"
mime = "0.3"
mockall = "0.11.4"
more-asserts = "0.3.1"
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "1a52783d6600ecc22e15253a982f77881bd47c77", package = "msim" }
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "1a52783d6600ecc22e15253a982f77881bd47c77", package = "msim-macros" }
multiaddr = "0.17.0"
nexlint = { git = "https://github.com/nextest-rs/nexlint.git", rev = "94da5c787636dad779c340affa65219134d127f5" }
nexlint-lints = { git = "https://github.com/nextest-rs/nexlint.git", rev = "94da5c787636dad779c340affa65219134d127f5" }
nonempty = "0.9.0"
notify = "6.1.1"
ntest = "0.9.0"
num-bigint = "0.4.4"
num_cpus = "1.15.0"
num_enum = "0.6.1"
object_store = { version = "0.7", features = ["aws", "gcp", "azure"] }
once_cell = "1.18.0"
ouroboros = "0.17"
parking_lot = "0.12.1"
parquet = "47.0.0"
pkcs8 = { version = "0.9.0", features = ["std"] }
pprof = { version = "0.11.0", features = ["cpp", "frame-pointer"] }
pretty_assertions = "1.3.0"
prettytable-rs = "0.10.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
prometheus-http-query = { version = "0.6.6", default_features = false, features = [
    "rustls-tls",
] }
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
proptest = "1.1.0"
proptest-derive = "0.3.0"
prost = "0.12.1"
prost-build = "0.12.1"
protobuf = { version = "2.28", features = ["with-bytes"] }
protobuf-src = "1.1.0"
quinn-proto = "^0.10.5"
quote = "1.0.23"
rand = "0.8.5"
rayon = "1.5.3"
rcgen = "0.9.2"
regex = "1.7.1"
reqwest = { version = "0.11.20", default_features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
roaring = "0.10.1"
rocksdb = { version = "0.21.0", features = [
    "snappy",
    "lz4",
    "zstd",
    "zlib",
    "multi-threaded-cf",
], default-features = false }
ron = "0.8.0"
rstest = "0.16.0"
rusoto_core = { version = "0.48.0", default_features = false, features = [
    "rustls",
] }
rusoto_kms = { version = "0.48.0", default_features = false, features = [
    "rustls",
] }
russh = "0.38.0"
russh-keys = "0.38.0"
rust-version = "1.56.1"
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
rustversion = "1.0.9"
rustyline = "9.1.2"
rustyline-derive = "0.7.0"
schemars = { version = "0.8.10", features = ["either"] }
scopeguard = "1.1"
serial_test = "2.0.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_bytes = "0.11.5"
serde-name = "0.2.1"
serde-reflection = "0.3.6"
serde_json = { version = "1.0.95", features = [
    "preserve_order",
    "arbitrary_precision",
] }
serde_repr = "0.1"
serde_test = "1.0.147"
serde_with = { version = "2.1.0", features = ["hex"] }
# serde_yaml = "0.9.21"
serde_yaml = "0.8.26"
shell-words = "1.1.0"
shellexpand = "3.1.0"
signature = "1.6.0"
similar = "2.2.0"
slip10_ed25519 = "0.1.3"
smallvec = "1.10.0"
snap = "1.1.0"
static_assertions = "1.1.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
# syn = { version = "2", features = ["full", "fold", "extra-traits"] }
synstructure = "0.12"
sysinfo = "0.27.5"
tabled = { version = "0.12" }
tap = "1.0.1"
tempfile = "3.3.0"
test-fuzz = "3.0.4"
thiserror = "1.0.40"
tiny-bip39 = "1.0.0"
tokio = "1.28.1"
tokio-retry = "0.3"
tokio-rustls = "0.24"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.4"
toml = { version = "0.7.4", features = ["preserve_order"] }
toml_edit = { version = "0.19.10" }
tonic = { version = "0.10", features = ["transport", "tls"] }
tonic-build = { version = "0.10", features = ["prost", "transport"] }
tonic-health = "0.10"
tower = { version = "0.4.12", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.3.4", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }
# tower-http = { version="0.4", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
    "std",
    "smallvec",
    "fmt",
    "ansi",
    "time",
    "json",
    "registry",
    "env-filter",
] }
ttl_cache = "0.5.1"
uint = "0.9.4"
unescape = "0.1.0"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
webpki = { version = "0.101.0", package = "rustls-webpki", features = [
    "alloc",
    "std",
] }
x509-parser = "0.14.0"
zstd = "0.12.3"
zeroize = "1.6.0"
versions = "4.1.0"


fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9579a60fbffe15c0f65626ae55998bf8ef42e193" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9579a60fbffe15c0f65626ae55998bf8ef42e193" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "9579a60fbffe15c0f65626ae55998bf8ef42e193", package = "fastcrypto-zkp" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "1169850e6af127397068cd86764c29b1d49dbe35" }
