[package]
name = "reth-test-cluster"
version = "0.1.0"
authors = ["Duc Huong Nguyen <huong@codelight.co>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
futures = "0.3.26"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1.0"
clap = "4"
async-trait = "0.1.61"
anyhow = "1.0.71"
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", rev = "01a8af7fca6aa8d24cdafad87a1191e06ac75af8", package = "telemetry-subscribers" }
derivative = "2.2.0"
tempfile = "3.8"
ethers = { version = "2.0", features = ["rustls"] }
dotenvy = { version = "0.15", default-features = false }
envy = "0.4"
jsonrpsee = { version = "0.20", features = ["server"] }
rand = "0.8.5"
scalar-reth = { path = "../crates/scalar-reth" }
reth-tasks = { path = "../reth/crates/tasks" }
eyre = "0.6"

[[bin]]
name = "reth-test-client"
path = "src/bin/reth_test_client.rs"
