[workspace]
members = [
    "bin",
    "rpc/rpc-api"
]
default-members = ["bin"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Scalar org <build@scalar.org>"]
publish = false
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
homepage = "https://scalar.org"
repository = "https://github.com/scalar.org/scalar"
description = "Scalar validator node implementation"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rustdoc.all = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"

[workspace.dependencies]
reth-metrics = { path = "../reth/crates/metrics" }
reth-nippy-jar = { path = "../reth/crates/storage/nippy-jar" }
reth-discv4 = { path = "../reth/crates/storage/net/discv4" }
reth-primitives = { path = "../reth/crates/primitives", features = [
    "arbitrary",
    "clap",
] }
reth-provider = { path = "../reth/crates/storage/provider" }
reth-rpc-types = { path = "../reth/crates/rpc/rpc-types"}
reth-rpc-types-compat = { path = "../reth/crates/rpc/rpc-types-compat"}
reth-tracing = { path = "../reth/crates/tracing" }
reth-tasks = { path = "../reth/crates/tasks" }
# Todo: Seperate transaction pool for common abci interfaces
reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
# Todo: remove redundant dependency
reth-node-api = { path = "../reth/crates/node-api" }
reth-network-api = { path = "../reth/crates/net/network-api" }
# Use only RethError
reth-interfaces = { path = "../reth/crates/interfaces" }
reth-rpc-api = { path = "rpc/rpc-api", package = "scalar-rpc-api" }
scalar-rpc = { path = "rpc/rpc" }

# crypto
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }
# for eip-4844
c-kzg = "0.4.2"

enr = { version = "0.9", default-features = false, features = ["k256"] }

# revm
revm = { version = "6.1.0", features = ["std", "secp256k1"], default-features = false }
revm-primitives = { version = "2.1.0", features = ["std"], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "75a187b" }


# eth
alloy-chains = { version = "0.1", feature = ["serde", "rlp", "arbitrary"] }
alloy-primitives = "0.6"
alloy-dyn-abi = "0.6"
alloy-sol-types = "0.6"
alloy-rlp = "0.3"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "76c70fb" }
alloy-rpc-trace-types = { git = "https://github.com/alloy-rs/alloy", rev = "76c70fb" }
alloy-rpc-engine-types = { git = "https://github.com/alloy-rs/alloy", rev = "76c70fb" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "76c70fb" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "76c70fb" }

# tracing
tracing = "0.1.0"

# io
fdlimit = "0.3.0"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false }
#config
confy = "0.6"
toml = "0.8"

# jsonrpsee
jsonrpsee = { version = "0.20" }
jsonrpsee-core = { version = "0.20" }
jsonrpsee-types = { version = "0.20" }

# metrics
metrics-process = "=1.0.14"

# test vectors generation
proptest = "1.4"
proptest-derive = "0.4"
rand = "0.8.5"

# tui
comfy-table = "7.0"
crossterm = "0.27.0"
ratatui = "0.25.0"
human_bytes = "0.4.1"

# tokio
tokio-stream = "0.1.11"
tokio = { version = "1.21", default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
async-trait = "0.1.68"
futures = "0.3.26"
pin-project = "1.0.12"
futures-util = "0.3.25"

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# misc
arbitrary = "1.3"
aquamarine = "0.5"
bytes = "1.5"
eyre = "0.6"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99.17"
tempfile = "3.8"
backon = "0.4"
schnellru = "0.2"
strum = "0.26"
syn = "2.0"
rayon = "1.7"
itertools = "0.12"
metrics = "0.21.1" # Needed for `metrics-macro` to resolve the crate using `::metrics` notation
once_cell = "1.17"
boyer-moore-magiclen = "0.2.16"
thiserror = "1.0"

# misc-testing
assert_matches = "1.5.0"
similar-asserts = "1.5.0"
test-fuzz = "5"